--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </nav>
     <main class="main">
-      <section class="hero">
+      <section class="hero mar-bot">
         <div class="hero-text-box">
           <h1 class="hero-text-heading">Welcome to My Portfolio!</h1>
           <p class="hero-text-description">
@@ -44,7 +44,7 @@
             class="hero-img" />
         </div>
       </section>
-      <section class="about" id="about">
+      <section class="about mar-bot" id="about">
         <div class="about-box">
           <h1 class="about-heading">Get to know me!</h1>
           <p class="about-description-para1">
@@ -82,7 +82,7 @@
         </div>
       </section>
 
-      <section class="skill" id="skill">
+      <section class="skill mar-bot" id="skill">
         <div class="specialize-box">
           <h1 class="specialize-heading">I specialize in:</h1>
           <ul class="specialize-list">
@@ -122,7 +122,7 @@
           </figure>
         </div>
       </section>
-      <section class="project" id="project">
+      <section class="project mar-bot" id="project">
         <h1 class="project-heading">Showcasing My Work</h1>
         <div class="project-img">
           <img src="./img/project1.png" alt="Image of project1" /><img
@@ -134,7 +134,7 @@
             alt="Image of project4" />
         </div>
       </section>
-      <section class="contact" id="contact">
+      <section class="contact mar-bot" id="contact">
         <h1 class="contact-heading">Let's Connect</h1>
         <p class="contact-description">
           Ready to collaborate on a project? Have a question about my work? Feel
